fix errors
Signed-off-by: Thunderrock424242 <masonjoshua8@gmail.com>